add command to create executable